objects/Decision_Rules_Result__c.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>genesis__Applications__c</referenceTo>
        <relationshipLabel>Decision Rules Result</relationshipLabel>
        <relationshipName>Decision_Rules_Result</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Decision_Result_Code__c</fullName>
        <label>Decision Result Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decision_Rule_Message__c</fullName>
        <label>Decision Rule Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decision_Rule_Status__c</fullName>
        <label>Decision Rule Status</label>
        <picklist>
            <picklistValues>
                <fullName>PASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAIL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Decision Rules Result</label>
    <nameField>
        <displayFormat>DECR-{0000000000}</displayFormat>
        <label>Decision Rules Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Decision Rules Result</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>